name:                streaming-concurrency
version:             0.1.0.0
synopsis:            Concurrency support for the streaming ecosystem
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Streaming.Concurrent
                     , Streaming.Concurrent.Lifted
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , exceptions
                     , lifted-async
                     , monad-control
                     , stm
                     , streaming
                     , streaming-with == 0.1.*
                     , transformers-base
  hs-source-dirs:      src
  default-language:    Haskell2010
