name:                streaming-concurrency
version:             0.1.0.0
synopsis:            Concurrency support for the streaming ecosystem
-- description:
license:             MIT
license-file:        LICENSE
author:              Ivan Lazar Miljenovic
maintainer:          Ivan.Miljenovic@gmail.com
copyright:           Ivan Lazar Miljenovic
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/ivan-m/streaming-concurrency.git

library
  exposed-modules:     Streaming.Concurrent
                     , Streaming.Concurrent.Lifted
  build-depends:       base >=4.9 && <4.10
                     , exceptions >= 0.6 && < 0.9
                     , lifted-async >= 0.9.1 && < 0.10
                     , monad-control == 1.*
                     , stm >= 2.4 && < 3
                     , streaming >= 0.1.4.0 && < 0.2
                     , streaming-with == 0.1.*
                     , transformers-base
  hs-source-dirs:      src
  default-language:    Haskell2010
